--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -8,7 +8,8 @@
         xmlns:vw="clr-namespace:EvernoteClone.ViewModel"
         xmlns:uc="clr-namespace:EvernoteClone.View.UserControls"
         mc:Ignorable="d"
-        Title="NotesWindow" Height="600" Width="1000">
+        Title="Notes" 
+        Height="600" Width="1000">
     <Window.Resources>
         <vw:NotesVM x:Key="vm"/>
     </Window.Resources>
