--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
         Title="Login" 
-        Icon="../Notes.ico"
+        Icon="Notes.ico"
         Height="300" Width="300" 
         BorderThickness="1,1,1,1">
     <Window.Resources>
