Update notes window, add to the edit menu items the command parameter equals to the binding object, then, in the execute method of edit command, pass the parameter.GetType value to the start editing method. Using this value i will select the correct IsVisible variable to enable.

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -34,7 +34,7 @@
                         <uc:DisplayNotebook Notebook="{Binding}">
                             <uc:DisplayNotebook.ContextMenu>
                                 <ContextMenu>
-                                    <MenuItem Header="Rename" Command="{Binding Source={StaticResource vm}, Path=EditCommand}" />
+                                    <MenuItem Header="Rename" Command="{Binding Source={StaticResource vm}, Path=EditCommand}" CommandParameter="{Binding}"/>
                                 </ContextMenu>
                             </uc:DisplayNotebook.ContextMenu>
                         </uc:DisplayNotebook>
@@ -58,7 +58,7 @@
                     <uc:DisplayNote Note="{Binding}">
                         <uc:DisplayNote.ContextMenu>
                             <ContextMenu>
-                                <MenuItem Header="Rename" Command="{Binding Source={StaticResource vm}, Path=EditCommand}" />
+                                <MenuItem Header="Rename" Command="{Binding Source={StaticResource vm}, Path=EditCommand}" CommandParameter="{Binding}" />
                             </ContextMenu>
                         </uc:DisplayNote.ContextMenu>
                     </uc:DisplayNote>
