Rename IsVisible to IsVisibleNotebook in NotesVm, then update the text box visible variable name in the notes window. Update firm of StartEditing method in NotesVM: add generic parameter

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -38,7 +38,7 @@
                                 </ContextMenu>
                             </uc:DisplayNotebook.ContextMenu>
                         </uc:DisplayNotebook>
-                        <TextBox Text="{Binding Name}" Visibility="{Binding Source={StaticResource vm}, Path=IsVisible}">
+                        <TextBox Text="{Binding Name}" Visibility="{Binding Source={StaticResource vm}, Path=IsVisibleNotebook}">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="LostFocus">
                                     <i:InvokeCommandAction 
