Update NotesWindow: - add name to the ToolBarTray - add code to disable the toolbar and the content rich text box if there isn't a selected note

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -76,7 +76,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <ToolBarTray DockPanel.Dock="Top">
+        <ToolBarTray x:Name="contentToolbar" DockPanel.Dock="Top">
             <ToolBar>
                 <Button x:Name="speechButton" Content="Speech" Click="SpeechButton_Click"/>
                 <ToggleButton x:Name="boldButton" Content="B" FontWeight="Bold" Click="BoldButton_Click"/>
