Update NotesWindow, add delete menu item in the display note context menu adding the binding options as the other menu items in the window

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -61,6 +61,7 @@
                             <uc:DisplayNote.ContextMenu>
                                 <ContextMenu>
                                     <MenuItem Header="Rename" Command="{Binding Source={StaticResource vm}, Path=EditCommand}" CommandParameter="{Binding}" />
+                                    <MenuItem Header="Delete" Command="{Binding Source={StaticResource vm}, Path=DeleteCommand}" CommandParameter="{Binding}"/>
                                 </ContextMenu>
                             </uc:DisplayNote.ContextMenu>
                         </uc:DisplayNote>
