Update namespaces, convert EvernoteClone to WorkordersNotes

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="EvernoteClone.View.NotesWindow"
+﻿<Window x:Class="WorkordersNotes.View.NotesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:local="clr-namespace:EvernoteClone.View"
-        xmlns:vw="clr-namespace:EvernoteClone.ViewModel"
-        xmlns:uc="clr-namespace:EvernoteClone.View.UserControls"
+        xmlns:local="clr-namespace:WorkordersNotes.View"
+        xmlns:vw="clr-namespace:WorkordersNotes.ViewModel"
+        xmlns:uc="clr-namespace:WorkordersNotes.View.UserControls"
         mc:Ignorable="d"
         Title="Notes" 
         Icon="Notes.ico"
