--- a/EvernoteClone/App.xaml
+++ b/EvernoteClone/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="EvernoteClone.App"
+﻿<Application x:Class="WorkordersNotes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EvernoteClone"
+             xmlns:local="clr-namespace:WorkordersNotes"
              StartupUri="/View/NotesWindow.xaml">
     <Application.Resources>
          
