--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="EvernoteClone.View.LoginWindow"
+﻿<Window x:Class="WorkordersNotes.View.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:local="clr-namespace:EvernoteClone.View"
-        xmlns:vm="clr-namespace:EvernoteClone.ViewModel"
+        xmlns:local="clr-namespace:WorkordersNotes.View"
+        xmlns:vm="clr-namespace:WorkordersNotes.ViewModel"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
         Title="Login" 
