--- a/EvernoteClone/View/UserControls/DisplayNotebook.xaml
+++ b/EvernoteClone/View/UserControls/DisplayNotebook.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="EvernoteClone.View.UserControls.DisplayNotebook"
+﻿<UserControl x:Class="WorkordersNotes.View.UserControls.DisplayNotebook"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EvernoteClone.View.UserControls"
+             xmlns:local="clr-namespace:WorkordersNotes.View.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
     <Grid>
