--- a/WorkordersNotes/View/NotesWindow.xaml
+++ b/WorkordersNotes/View/NotesWindow.xaml
@@ -17,7 +17,7 @@
     <DockPanel DataContext="{StaticResource vm}">
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
-                <MenuItem Header="New customer" Command="{Binding NewNotebookCommand}"/>
+                <MenuItem Header="New customer" Command="{Binding NewCustomerCommand}"/>
                 <MenuItem Header="New note" Command="{Binding NewNoteCommand}" CommandParameter="{Binding SelectedNotebook}"/>
                 <Separator />
                 <MenuItem Header="Exit" Click="Exit_Click"/>
