Update NotesWindow, add options menu item inside the menu, and inside it define the language option with inside the italian and english menu items

--- a/WorkordersNotes/View/NotesWindow.xaml
+++ b/WorkordersNotes/View/NotesWindow.xaml
@@ -22,6 +22,12 @@
                 <Separator />
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
+            <MenuItem Header="Options">
+                <MenuItem Header="Language">
+                    <MenuItem Header="Italian"/>
+                    <MenuItem Header="English"/>
+                </MenuItem>
+            </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
