Update NotesWindow, bing the two language options to the change language command and pass each of them as parameter the language name

--- a/WorkordersNotes/View/NotesWindow.xaml
+++ b/WorkordersNotes/View/NotesWindow.xaml
@@ -24,8 +24,8 @@
             </MenuItem>
             <MenuItem Header="Options">
                 <MenuItem Header="Language">
-                    <MenuItem Header="Italian"/>
-                    <MenuItem Header="English"/>
+                    <MenuItem Header="Italian" Command="{Binding ChangeLanguageCommand}" CommandParameter="Italian"/>
+                    <MenuItem Header="English" Command="{Binding ChangeLanguageCommand}" CommandParameter="English"/>
                 </MenuItem>
             </MenuItem>
         </Menu>
