--- a/WorkordersNotes/StringResources.en.xaml
+++ b/WorkordersNotes/StringResources.en.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:system="clr-namespace:System;assembly=netstandard">
+                    xmlns:system="clr-namespace:System;assembly=netstandard">
     <system:String x:Key="LoginWindowTextEmail">Email:</system:String>
     <system:String x:Key="LoginWindowTextName">Name:</system:String>
     <system:String x:Key="LoginWindowTextLastname">Lastname:</system:String>
