--- a/WorkordersNotes/StringResources.it.xaml
+++ b/WorkordersNotes/StringResources.it.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:system="clr-namespace:System;assembly=netstandard">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                    xmlns:system="clr-namespace:System;assembly=netstandard">
     <system:String x:Key="LoginWindowTextEmail">Email:</system:String>
     <system:String x:Key="LoginWindowTextName">Nome:</system:String>
     <system:String x:Key="LoginWindowTextLastname">Cognome:</system:String>
@@ -12,6 +13,7 @@
     <system:String x:Key="NotesWindowMenuItemFile">File</system:String>
     <system:String x:Key="NotesWindowMenuItemNewCostumer">Nuovo cliente</system:String>
     <system:String x:Key="NotesWindowMenuItemNewNote">Nuova nota</system:String>
+    <system:String x:Key="NotesWindowMenuItemExit">Esci</system:String>
     <system:String x:Key="NotesWindowMenuItemRename">Rinomina</system:String>
     <system:String x:Key="NotesWindowMenuItemDelete">Elimina</system:String>
     <system:String x:Key="NotesWindowMenuItemOptions">Opzioni</system:String>
